# Nocode-main

./: Dockerfile  LICENSE  README.md  app.py  dd.py  index.html  main.py  pyproject.toml  requirements.txt  users.db  utils.py  utilss.py
backend/: app.py  database.py  models.py  server.py
static/: ext.js  script.js  style.css
templates/: base.html  index.html
templates/app/: base.html
templates/app/auth/: login.html  register.html
templates/app/components/: form_modal.html  navbar.html  options.html  sidebar.html  toastify.html
templates/app/dashboard/: playground.html  profile.html
templates/auth/: login.html  register.html
templates/components/: temple.html
templates/components/Accordion/: first.html  primary.html
templates/components/Breadcrumb/: primary.html
templates/components/Card/: primary.html
templates/components/Carusel/: primary.html
templates/components/Footer/: primary.html
templates/components/Header/: primary.html
templates/components/Pagination-button/: primary.html
templates/components/Progress/: primary.html
templates/components/header/: primary.html
templates/dashboard/: base.html  playground.html  profile.html
templates/dashboard/components/: createFormModal.html  navbar.html  playground.html
templates/users/admin/: name.txt  password.txt
templates/users/alien/: name.txt  password.txt
templates/users/alien/Mypg/: index.html
templates/users/hojiakbar/: password.txt
templates/users/rgew/: name.txt  password.txt
templates/users/somsa/: name.txt  password.txt
templates/users_template/admin/: password.txt
(+14 files in other folders)
